--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "AppPresser",
   "license": "GPLv2",
   "bugs": {
-    "url": "https://github.com/WebDevStudios/AppPresser/issues"
+    "url": "https://github.com/rhacius/AppPresser/issues"
   },
-  "homepage": "http://apppresser.com/"
+  "homepage": "https://engenharia.co/"
 }
