--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/rhacius/AppPresser/issues"
   },
-  "homepage": "https://engenharia.co/"
+  "homepage": "http://engenharia.co/"
 }
